# birdclef-2026

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: effnet_b0.yaml  perch_probe.yaml
docs/: 01_competition_summary_and_approach.md  01_project_overview.md  02_coding_standards.md  03_eda_full_insights.md  03_eda_insights.md  04_effnet_b0_results.md  05_perch_v2_results.md  06_next_steps.md  07_distilled_sed_review.md  08_protossm_review.md  09_onnx_sed_results.md  10_onnx_perch_speed_results.md  11_onnx_perch_sed_blend_results.md  12_perch_mapping_diagnostics.md  13_soundscape_calibration_diagnostics.md  1_instructions.md  2_coding_standards.md  5_perch_v2_results.md  coding_standards.md  eda_full_insights.md  effnet_b0_results.md  perch_v2_results.md
notebooks/: 01_data_eda.ipynb  01_eda.ipynb  02_effnet_b0.ipynb  02_effnet_b0_baseline.ipynb  03_perch_v2.ipynb  03_perch_v2_probe.ipynb  03_perch_v2_train.ipynb  04_effnet_b0_submission.ipynb  04_perch_v2_submit.ipynb  05_onnx_sed_submit.ipynb  05_perch_v2_submission.ipynb  06_onnx_perch_speed_test.ipynb  07_onnx_perch_sed_blend.ipynb  08_onnx_perch_sed_blend_w025.ipynb  10_onnx_perch_sed_soundscape_calibrated.ipynb  11_onnx_perch_sed_calibrated_min10_ap001.ipynb  12_onnx_perch_sed_calibrated_shrink050.ipynb  13_onnx_perch_sed_temporal_residual.ipynb  1_bc2026_eda.ipynb  2_bc2026_effnet_b0.ipynb  3_bc2026_perch_v2.ipynb  README.md
reports/: BirdCLEF_2026_Project_Report.docx  PROJECT_REPORT.md
scripts/: build_project_report_docx.py  create_kaggle_notebooks.py  extract_perch_embeddings.py  (+4 more)
(+48 files in other folders)
