[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdclef-2026"
version = "0.1.0"
description = "Reusable training and EDA code for the Kaggle BirdCLEF+ 2026 competition."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "iterative-stratification>=0.1.7",
  "librosa>=0.10",
  "soundfile>=0.12",
  "torch>=2.1",
  "torchvision>=0.16",
  "timm>=0.9",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
perch = [
  "tensorflow>=2.15",
]
dev = [
  "jupyterlab>=4.0",
  "ruff>=0.4",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["src"]
